# wd-tagger-rs

./: Cargo.toml  README.md
.github/workflows/: build-release-binaries.yml  rust.yml
src/: image_processor.rs  labels.rs  main.rs  model.rs  padding.rs  progress_tracker.rs
