[package]
name = "wd-tagger-rs"
version = "0.2.0"
authors = []
edition = "2021"
description = "Trying to Infer WaifuDiffusion Tagger in Rust"
repository = "https://github.com/nusu-github/wd-tagger-rs"
license = "Apache-2.0"
readme = "README.md"
categories = ["command-line-utilities"]
keywords = []

[features]
default = []
cuda = ["ort/cuda"]

[dependencies]
anyhow = "^1.0.86"
clap = { version = "^4.5.16", features = ["derive"] }
crossbeam-channel = "^0.5.13"
csv = "^1.3.0"
hf-hub = "^0.3.2"
image = { version = "^0.25.2", default-features = false, features = ["bmp", "gif", "jpeg", "png", "tiff", "webp"] }
indicatif = "^0.17.8"
ndarray = "^0.16.1"
nshare = { version = "0.10.0", default-features = false, features = ["ndarray", "image"] }
num-traits = "^0.2.19"
ort = { version = "^2.0.0-rc.5", features = ["load-dynamic"] }
rayon = "^1.10.0"
serde = { version = "^1.0.209", features = ["derive"] }
walkdir = "^2.5.0"
