[package]
name = "wd-tagger-rs"
version = "0.2.0"
authors = []
edition = "2021"
description = "Trying to Infer WaifuDiffusion Tagger in Rust"
repository = "https://github.com/nusu-github/wd-tagger-rs"
license = "Apache-2.0"
readme = "README.md"
categories = ["command-line-utilities"]
keywords = []

[features]
default = ["image"]

# ort execution providers
cuda = ["ort/cuda"]
tensorrt = ["ort/tensorrt"]

# image processing
image = ["image/jpeg", "image/png", "image/webp"]
image-extra = ["image/bmp", "image/gif", "image/tiff"]
## The reason for separating avif is that the binary size becomes too large to ignore.
image-avif = ["image/avif"]

[dependencies]
anyhow = "1"
clap = { version = "^4.5.20", features = ["derive"] }
crossbeam-channel = "^0.5.13"
csv = "^1.3.0"
hf-hub = "^0.3.2"
image = { version = "^0.25.2", default-features = false }
indicatif = "^0.17.8"
ndarray = "^0.16.1"
nshare = { version = "0.10.0", default-features = false, features = ["ndarray", "image"] }
num-traits = "^0.2.19"
ort = "^2.0.0-rc.6"
rayon = "^1.10.0"
serde = { version = "^1.0.210", features = ["derive"] }
walkdir = "^2.5.0"
